--- a/src/com/cburch/LogisimFX/newgui/CircuitStatisticFrame/CircuitStatistic.fxml
+++ b/src/com/cburch/LogisimFX/newgui/CircuitStatisticFrame/CircuitStatistic.fxml
@@ -6,9 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cburch.LogisimFX.newgui.CircuitStatisticFrame.CircuitStatisticController"
-            prefHeight="400.0" prefWidth="600.0">
+
+<AnchorPane fx:id="Anchor" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cburch.LogisimFX.newgui.CircuitStatisticFrame.CircuitStatisticController">
 
 </AnchorPane>
