--- a/src/com/cburch/LogisimFX/newgui/ExportImageFrame/ExportImage.fxml
+++ b/src/com/cburch/LogisimFX/newgui/ExportImageFrame/ExportImage.fxml
@@ -1,24 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cburch.LogisimFX.newgui.ExportImageFrame.ExportImageController">
+<AnchorPane prefHeight="325.0" prefWidth="375.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cburch.LogisimFX.newgui.ExportImageFrame.ExportImageController">
    <children>
-      <Label fx:id="CircuitsLbl" layoutX="25.0" layoutY="15.0" text="Label" />
-      <Label fx:id="FormatLbl" layoutX="24.0" layoutY="163.0" text="Label" />
-      <Label fx:id="ScaleLbl" layoutX="25.0" layoutY="261.0" text="Label" />
-      <RadioButton fx:id="PngRB" layoutX="100.0" layoutY="163.0" mnemonicParsing="false" text="PNG" />
-      <RadioButton fx:id="GifRb" layoutX="100.0" layoutY="193.0" mnemonicParsing="false" text="GIF" />
-      <RadioButton fx:id="JpegRB" layoutX="100.0" layoutY="223.0" mnemonicParsing="false" text="JPEG" />
-      <CheckBox fx:id="MonocrhomChkBx" layoutX="100.0" layoutY="309.0" mnemonicParsing="false" text="CheckBox" />
-      <Slider fx:id="ScaleSl" layoutX="100.0" layoutY="262.0" />
-      <ListView fx:id="CircuitsLstVw" layoutX="100.0" layoutY="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="200.0" />
-      <Button fx:id="OkBtn" layoutX="113.0" layoutY="341.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Ok" />
-      <Button fx:id="CancelBtn" layoutX="212.0" layoutY="341.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Cancel" />
+      <GridPane hgap="5.0" layoutX="179.0" layoutY="157.0" vgap="5.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="20.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="20.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="20.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="-Infinity" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label fx:id="CircuitsLbl" text="Label" GridPane.valignment="TOP" />
+            <Label fx:id="FormatLbl" text="Label" GridPane.rowIndex="1" />
+            <RadioButton fx:id="PngRb" mnemonicParsing="false" text="PNG" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <RadioButton fx:id="GifRb" mnemonicParsing="false" text="GIF" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <RadioButton fx:id="JpegRb" mnemonicParsing="false" text="JPEG" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="ScaleLbl" text="Label" GridPane.rowIndex="4" />
+            <Slider fx:id="ScaleSl" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label fx:id="PrintViewLbl" text="Label" GridPane.rowIndex="5" />
+            <CheckBox fx:id="PrintViewChkBx" mnemonicParsing="false" text="CheckBox" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Button fx:id="OkBtn" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Ok" GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="BOTTOM">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="CancelBtn" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Cancel" GridPane.columnIndex="1" GridPane.rowIndex="6" GridPane.valignment="BOTTOM">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Button>
+            <ListView fx:id="CircuitsLstVw" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
